[gd_scene load_steps=2 format=3 uid="uid://fi2525215vcf"]

[ext_resource type="Script" uid="uid://cy0pphpo42xmb" path="res://Scenes/UI/TestStartMenu.gd" id="1_xpprq"]

[node name="TestStartMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xpprq")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ClassLabel" type="Label" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
text = "Starting Class:"

[node name="ClassOptionButton" type="OptionButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="WeaponLabel" type="Label" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
text = "Choose Starting Weapon:"

[node name="WeaponOptionButton" type="OptionButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="StartGameButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Start Game"
